[tool.poetry]
name = "goit-hm-web-06"
version = "0.1.0"
description = ""
authors = ["Hnatiak <58102343+Hnatiak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^23.2.1"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
